src/main/java/com/example/socialapi/common/exception/errors/BadRequestException.java
package com.example.socialapi.common.exception.errors;

public class BadRequestException extends RuntimeException{
    public BadRequestException(String message) {
        super(message);
    }
}
